[project]
name = "kasbench-controller"
version = "0.1.0"
description = "KASBench Controller - Kubernetes Autoscaling Benchmark Orchestrator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.scripts]
kasbench = "kasbench_controller.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kasbench_controller"]
